--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@auth0/auth0-react": "^2.2.4",
     "@auth0/auth0-spa-js": "^2.1.3",
     "@tanstack/react-query": "^5.52.1",
+    "@types/styled-components": "^5.1.34",
     "@wagmi/connectors": "^5.1.7",
     "ethers": "^6.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.12",
     "viem": "^2.8.4",
     "wagmi": "^2.12.7"
   },
