--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.27.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^2.8.4",
-    "wagmi": "^2.5.7"
+    "react-router-dom": "^6.26.1",
+    "styled-components": "^6.1.12",
+    "viem": "^2.20.0",
+    "wagmi": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
